--- a/Resources/Settings.bundle/Root.plist
+++ b/Resources/Settings.bundle/Root.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Title</key>
+	<string>OpenNMS Settings</string>
+	<key>TitleKey</key>
+	<string>title</string>
 	<key>StringsTable</key>
 	<string>Root</string>
 	<key>PreferenceSpecifiers</key>
@@ -23,6 +27,8 @@
 			<false/>
 		</dict>
 		<dict>
+			<key>TextAlignment</key>
+			<string>Right</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
@@ -41,6 +47,8 @@
 			<string>No</string>
 		</dict>
 		<dict>
+			<key>TextAlignment</key>
+			<string>Right</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
@@ -59,6 +67,8 @@
 			<string>No</string>
 		</dict>
 		<dict>
+			<key>TextAlignment</key>
+			<string>Right</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
@@ -77,6 +87,8 @@
 			<string>No</string>
 		</dict>
 		<dict>
+			<key>TextAlignment</key>
+			<string>Right</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
@@ -95,6 +107,8 @@
 			<string>No</string>
 		</dict>
 		<dict>
+			<key>TextAlignment</key>
+			<string>Right</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
@@ -112,34 +126,6 @@
 			<key>AutocorrectionType</key>
 			<string>No</string>
 		</dict>
-<!--
-		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>Title</key>
-			<string>Enabled</string>
-			<key>Key</key>
-			<string>enabled_preference</string>
-			<key>DefaultValue</key>
-			<true/>
-		</dict>
-		<dict>
-			<key>Type</key>
-			<string>PSSliderSpecifier</string>
-			<key>Key</key>
-			<string>slider_preference</string>
-			<key>DefaultValue</key>
-			<real>0.5</real>
-			<key>MinimumValue</key>
-			<integer>0</integer>
-			<key>MaximumValue</key>
-			<integer>1</integer>
-			<key>MinimumValueImage</key>
-			<string></string>
-			<key>MaximumValueImage</key>
-			<string></string>
-		</dict>
--->
 	</array>
 </dict>
 </plist>
