--- a/OpenNMS-Info.plist
+++ b/OpenNMS-Info.plist
@@ -14,10 +14,12 @@
 	<string>iPhoneAppIcon.png</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>iPadAppIcon.png</string>
-		<string>iPhoneAppIcon.png</string>
+		<string>Icon.png</string>
+		<string>Icon@2x.png</string>
+		<string>Icon-72.png</string>
 		<string>Icon-Small-50.png</string>
 		<string>Icon-Small.png</string>
+		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIconFiles~ipad</key>
 	<array>
