--- a/OpenNMS-Info.plist
+++ b/OpenNMS-Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.opennms.opennms</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>onms</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
@@ -34,7 +45,7 @@
 	<key>CFBundleSignature</key>
 	<string>ONMS</string>
 	<key>CFBundleVersion</key>
-	<string>16</string>
+	<string>17</string>
 	<key>MinimumSystemVersion</key>
 	<string>3.0</string>
 	<key>UIInterfaceOrientation</key>
